--- a/week-5/poke-clone/src/index.css
+++ b/week-5/poke-clone/src/index.css
@@ -1,8 +1,16 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@font-face {
+  font-family: "vt323";
+  src: url("@/assets/fonts/VT323-Regular.ttf");
+}
+
 @custom-variant dark (&:is(.dark *));
 
+:root {
+  font-family: "vt323", sans-serif;
+}
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -73,7 +81,6 @@ button:focus-visible {
 } */
 
 @theme inline {
-
   --radius-sm: calc(var(--radius) - 4px);
 
   --radius-md: calc(var(--radius) - 2px);
@@ -146,7 +153,6 @@ button:focus-visible {
 }
 
 :root {
-
   --radius: 0.625rem;
 
   --background: oklch(1 0 0);
@@ -213,7 +219,6 @@ button:focus-visible {
 }
 
 .dark {
-
   --background: oklch(0.145 0 0);
 
   --foreground: oklch(0.985 0 0);
